mudando a estilização e adicionando meu curriculo em pdf

--- a/curriculo-website/src/index.html
+++ b/curriculo-website/src/index.html
@@ -17,13 +17,20 @@
         </div>
         
         <div class="about-me">
-            <h1> about me</h1>
-            <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. <br> Ex debitis culpa fugit quisquam ad quis odit, omnis tenetur <br> corrupti eius maxime ipsum, quaerat alias impedit similique <br>     distinctio voluptatibus! Consectetur, blanditiis?</p>
+            <h1> Sobre mim </h1>
+            <p> Estudante de Sistemas para Internet e profissional em transição para TI, <br> com
+                experiência em automação de processos e suporte administrativo usando Python <br> e
+                SQL. Já atuei com resolução de chamados (N1/N2), organização de dados e
+                desenvolvimento <br> de projetos acadêmicos em C#, Python, HTML, CSS e Java.
+                Busco oportunidade como <br> Estagiária, Desenvolvedora Júnior ou Analista de
+                Suporte/TI, onde possa aplicar minhas <br> habilidades técnicas,aprender novas tecnologias
+                e contribuir para a equipe.
+            </p>
         </div>
         <nav>
             <a class="link" href="#skills">skills</a>
             <a class="link" href="#hobbies-group">qualificações</a>
-            <a class="link" href="#academic-group" download>currículo</a>
+            <a class="link" href="./assets/files/curriculo.pdf" download>currículo</a>
         </nav>
     </header>
     <main>
@@ -32,7 +39,12 @@
             <div class="academic-group">
                 <div class="pt1">
                     <h1>Formação Acadêmica</h1>
-                        <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. <br> Ex debitis culpa fugit quisquam ad quis odit, omnis tenetur <br> corrupti eius maxime ipsum, quaerat alias impedit similique <br>     distinctio voluptatibus! Consectetur, blanditiis?</p>
+                        <li>Tecnologia em Sistemas para Internet (cursando)</li>
+                        <p>Centro Universitário Senac <br> Início: Ago/2025 | Conclusão prevista: Dez/2027</p>
+                        <li>Ciência da Computação (incompleto)</li>
+                        <p>Centro Universitário Senac <br> Fev/2024 – Mar/2025 | 3 semestres concluídos</p>
+                        <li>Técnico em TI</li>
+                        <p>Senac-SP - (2021 – 2023)</p>
                 </div>
                 <div class="pt2">
                     <h1>Experiência Profissional</h1>
