estilizando divs e adicionando informações, também adicionando curriculo em pdf

--- a/curriculo-website/src/index.html
+++ b/curriculo-website/src/index.html
@@ -10,14 +10,72 @@
     <link href="https://fonts.googleapis.com/css2?family=Alice&display=swap" rel="stylesheet">
     </head>
 <body>
+    <header>
+        <nav>
+        <a class="link" href="#skills">skills</a>
+        <a class="link" href="./assets/files/curriculo.pdf" donwload>currículo</a>
+        </nav>
+    </header>
     <div id="container">
+        <div class="info">
         <img src="./assets/images/minha-foto.jpeg" alt="foto de rosto 3x4, sou branca do cabelo preto, olhos pretos e estou séria">
         <section id="info-group">
             <h1>Kami Victoria V. de Souza</h1>
             <p>vilelakamy18@gmail.com | (11) 91342-0180 | in/kamivilela | github.com/vilelakami</p>
         </section>
+    </div>
         <main>
-            
+            <section id="about-me">
+                <h2>Sobre Mim</h2>
+                <p>Estudante de Sistemas para Internet e profissional em transição para TI, com 
+                    experiência em automação de processos e suporte administrativo usando Python e 
+                    SQL. Já atuei com resolução de chamados (N1/N2), organização de dados e 
+                    desenvolvimento de projetos acadêmicos em C#, Python, HTML, CSS e Java.
+                    Busco oportunidade como Estagiária, Desenvolvedora Júnior ou Analista de 
+                    Suporte/TI, onde possa aplicar minhas habilidades técnicas, aprender novas tecnologias 
+                    e contribuir para a equipe.</p>
+            </section>
+            <section id="formacao-academica">
+                <h2>Formação Acadêmica</h2>
+                <ol>
+                    <li>Tecnologia em Sistemas para Internet (cursando</li>
+                    <li>Ciência da Computação (incompleto)</li>
+                    <li>Ensino Médio</li>
+                    <li>Técnico em TI</li>
+                </ol>
+            </section>
+            <section id="skills">
+                <div class="soft-skills">
+                    <h2>Soft Skills</h2>
+                    <ul>
+                        <li></li>
+                        <li></li>
+                        <li></li>
+                        <li></li>
+                        <li></li>
+                    </ul>
+                </div>
+                <div class="hard-skills">
+                    <h2>Hard Skills</h2>
+                    <ul>
+                        <li></li>
+                        <li></li>
+                        <li></li>
+                        <li></li>
+                        <li></li>
+                    </ul>
+                </div>
+            </section>
+            <section id="profissional">
+                <h2>Experiência Profissional</h2>
+                <p>Célere</p>
+                <ul>
+                    <li></li>
+                    <li></li>
+                    <li></li>
+                    <li></li>
+                </ul>
+            </section>
         </main>
     </div>
 </body>
