adicionando informações e ajustando soft e hard skills

--- a/curriculo-website/src/index.html
+++ b/curriculo-website/src/index.html
@@ -38,31 +38,30 @@
             <section id="formacao-academica">
                 <h2>Formação Acadêmica</h2>
                 <ol>
-                    <li>Tecnologia em Sistemas para Internet (cursando</li>
-                    <li>Ciência da Computação (incompleto)</li>
-                    <li>Ensino Médio</li>
-                    <li>Técnico em TI</li>
+                    <li>Ensino Médio: 2021-2023, Senac Nações Unidas</li>
+                    <li>Técnico em TI: 2021-2023, Senac Nações Unidas</li>
+                    <li>Ciência da Computação (incompleto): 2024-2025, Centro Universitário Senac</li>
+                    <li>Tecnologia em Sistemas para Internet: 2025-Presente, Centro Universitário Senac</li>
                 </ol>
             </section>
             <section id="skills">
                 <div class="soft-skills">
                     <h2>Soft Skills</h2>
                     <ul>
-                        <li></li>
-                        <li></li>
-                        <li></li>
-                        <li></li>
-                        <li></li>
+                        <li>Boa comunicação e proatividade</li>
+                        <li>Capacidade de liderança em projetos</li>
+                        <li>Resolução de problemas e atenção a detalhes</li>
+                        <li>Facilidade em aprender novas tecnologias</li>
                     </ul>
                 </div>
                 <div class="hard-skills">
                     <h2>Hard Skills</h2>
                     <ul>
-                        <li></li>
-                        <li></li>
-                        <li></li>
-                        <li></li>
-                        <li></li>
+                        <li>Linguagens de Programação: Python, C#, Java</li>
+                        <li>Banco de Dados: SQL (MySQL, SQL Server)</li>
+                        <li>Web: HTML, CSS, JavaScript</li>
+                        <li>Ferramentas: GitHub, VS Code, Visual Studio</li>
+                        <li>Outros: Automação de processos, suporte N1/N2,<br> segurança da informação</li>
                     </ul>
                 </div>
             </section>
