adicionando styles do css como reset e global, modificando estilizações

--- a/curriculo-website/src/index.html
+++ b/curriculo-website/src/index.html
@@ -4,7 +4,9 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Meu Currículo</title>
-    <link rel="stylesheet" href="style.css">
+    <link rel="stylesheet" href="./assets/pages/style.css">
+    <link rel="stylesheet" href="./assets/pages/reset.css">
+    <link rel="stylesheet" href="./assets/pages/global.css">
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Alice&display=swap" rel="stylesheet">
@@ -13,7 +15,7 @@
     <header>
         <nav>
         <a class="link" href="#skills">skills</a>
-        <a class="link" href="./assets/files/curriculo.pdf" donwload>currículo</a>
+        <a target="_blank" class="link" href="./assets/files/curriculo.pdf" donwload>currículo</a>
         </nav>
     </header>
     <div id="container">
@@ -67,15 +69,18 @@
             </section>
             <section id="profissional">
                 <h2>Experiência Profissional</h2>
-                <p>Célere</p>
+                <p>Célere Intralogística – Assistente Administrativo de RH (Dez/2023 – Set/2025)</p>
                 <ul>
-                    <li></li>
-                    <li></li>
-                    <li></li>
-                    <li></li>
+                    <li>Desenvolvimento de automação de processos internos com Python, reduzindo tempo em tarefas repetitivas.</li>
+                    <li>Manipulação e organização de dados em planilhas e sistemas internos.</li>
+                    <li>Suporte e atendimento a colaboradores, incluindo resolução de problemas técnicos e administrativos.</li>
+                    <li>Organização de informações confidenciais com foco em segurança e integridade dos dados.</li>
                 </ul>
             </section>
         </main>
     </div>
+    <footer>
+        Feito com amor por Kami
+    </footer>
 </body>
 </html>
